Initial training of Seg-VIT. Compute statistics of FT segments code

--- a/scripts/data_process.ipynb
+++ b/scripts/data_process.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sk138/miniconda3/envs/general/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from torchvision import datasets, transforms\n",
     "from timm.data import create_transform\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +171,7 @@
     "    B = x.shape[0]\n",
     "    \n",
     "    # Allocate\n",
-    "    seg_out = torch.zeros((B, n_segments, n_points * n_points * 2))\n",
+    "    seg_out = torch.zeros((B, n_segments, int(n_points * (n_points/2 + 1) * 2)))\n",
     "    pos_out = torch.zeros((B, n_segments, 5))\n",
     "\n",
     "    # TODO: Verify implementation\n",
@@ -176,17 +185,23 @@
     "        segmented_imgs = binary_mask * x\n",
     "\n",
     "        # Take FT and separate magnitude and phase info\n",
-    "        fourier_transform = torch.fft.fft2(segmented_imgs, s=(n_points, n_points))\n",
+    "        # fourier_transform = torch.fft.fft2(segmented_imgs, s=(n_points, n_points))\n",
+    "        fourier_transform = torch.fft.rfft2(segmented_imgs, s=(n_points, n_points))\n",
     "        magnitude = torch.abs(fourier_transform) \n",
     "        phase = torch.angle(fourier_transform) \n",
     "\n",
+    "        assert torch.sum(torch.isnan(magnitude)).item() == 0, \"NaN element in the magnitude before normalization\"\n",
+    "\n",
     "        # Normalize scales\n",
-    "        magnitude = magnitude / torch.max(magnitude) # [0 1]\n",
+    "        magnitude = magnitude / (1 if torch.max(magnitude)==0 else torch.max(magnitude))  # [0 1] -- divide by 1 if max is already 0.\n",
     "        phase = phase / torch.tensor(math.pi) # [-1 1]\n",
     "\n",
     "        # print(torch.max(magnitude))\n",
     "        # print(torch.max(phase))\n",
     "        # print(torch.min(phase))\n",
+    "\n",
+    "        assert torch.sum(torch.isnan(magnitude)).item() == 0, \"NaN element in the magnitude after normalization\"\n",
+    "        assert torch.sum(torch.isnan(phase)).item() == 0, \"NaN element in the magnitude\"\n",
     "\n",
     "        # Save\n",
     "        to_save = torch.stack((magnitude, phase)).reshape((fourier_transform.shape[0], -1))\n",
@@ -208,7 +223,9 @@
     "        height = rect[:, 1]\n",
     "\n",
     "        # Save\n",
-    "        pos_save = torch.t(torch.stack([area, center_x, center_y, width, height])) #TODO: make this device (how does this work with DataParallel)\n",
+    "        pos = torch.stack([area, center_x, center_y, width, height])\n",
+    "        assert torch.sum(torch.isnan(pos)).item() == 0, \"NaN element in the positional stats\"\n",
+    "        pos_save = torch.t(pos) #TODO: make this device (how does this work with DataParallel)\n",
     "        pos_out[:, i, :] = pos_save\n",
     "            \n",
     "    return seg_out, pos_out"
@@ -216,34 +233,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'magnitude' where it is not associated with a value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/sk138/seg_deit/scripts/data_process.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m seg_mask \u001b[39m=\u001b[39m process_segment(inputs, n_segments\u001b[39m=\u001b[39mn_segments)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m input_gray \u001b[39m=\u001b[39m grayscale_transform(inputs)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m seg_out, pos_out \u001b[39m=\u001b[39m process_ft(input_gray, seg_mask, n_segments\u001b[39m=\u001b[39mn_segments, n_points\u001b[39m=\u001b[39mn_points)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m save_data \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mcat((seg_out, pos_out), dim\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\u001b[39m.\u001b[39mcpu()\u001b[39m.\u001b[39mnumpy() \u001b[39m# Stack data and format for save\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# Iterate over data and save\u001b[39;00m\n",
-      "\u001b[1;32m/home/sk138/seg_deit/scripts/data_process.ipynb Cell 5\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m \u001b[39m# Take FT and separate magnitude and phase info\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m fourier_transform \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mfft\u001b[39m.\u001b[39mfft2(segmented_imgs, s\u001b[39m=\u001b[39m(n_points, n_points))\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=46'>47</a>\u001b[0m magnitude \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mabs(fourier_transform) \u001b[39m/\u001b[39m torch\u001b[39m.\u001b[39mmax(magnitude) \u001b[39m# Normalize scale to [0 1]\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=47'>48</a>\u001b[0m phase \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mangle(fourier_transform) \u001b[39m/\u001b[39m torch\u001b[39m.\u001b[39mtensor(math\u001b[39m.\u001b[39mpi) \u001b[39m# Normalize to [-1 1]\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=49'>50</a>\u001b[0m \u001b[39m# print(torch.max(magnitude))\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=50'>51</a>\u001b[0m \u001b[39m# print(torch.max(phase))\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=51'>52</a>\u001b[0m \u001b[39m# print(torch.min(phase))\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=52'>53</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a223139322e31372e3130322e313031222c2275736572223a22736b313338227d/home/sk138/seg_deit/scripts/data_process.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=53'>54</a>\u001b[0m \u001b[39m# Save\u001b[39;00m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'magnitude' where it is not associated with a value"
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n"
      ]
     }
    ],
    "source": [
-    "data_type = \"test\"\n",
+    "data_type = \"train\"\n",
+    "use = data_loader_train if data_type==\"train\" else data_loader_test\n",
     "\n",
     "# Iterate over dataloader\n",
-    "for i, (inputs, labels) in enumerate(data_loader_test):\n",
+    "for i, (inputs, labels) in enumerate(use):\n",
     "    print(i)\n",
     "    inputs = inputs.to(DEVICE)\n",
     "    inputs = inputs.to(torch.uint8)\n",
