Final commit for project

--- a/scripts/data_process.ipynb
+++ b/scripts/data_process.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sk138/miniconda3/envs/general/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torchvision import datasets, transforms\n",
     "from timm.data import create_transform\n",
@@ -27,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,16 +52,21 @@
     "pin_mem = True\n",
     "n_points=64\n",
     "batch_size=1000\n",
-    "DEVICE='cuda:3'\n",
+    "DEVICE='cuda:1'\n",
     "\n",
     "# Pathing\n",
-    "save_parent = f\"cifar-{n_segments}-{n_points}/\"\n",
+    "save_parent = f\"cifar-{n_segments}-{n_points}-standard/\"\n",
     "full_save_path = os.path.join(save_path, save_parent)\n",
     "\n",
     "# Transforms\n",
     "train_transform = create_transform(input_size, is_training=True, no_aug=True)\n",
     "test_transform = create_transform(input_size, is_training=False, no_aug=True)\n",
     "grayscale_transform = transforms.Grayscale()\n",
+    "\n",
+    "stats = torch.load('train_stats.pt')\n",
+    "standard_transform_mag = transforms.Normalize(mean=stats[0], std=stats[1])\n",
+    "standard_transform_phase = transforms.Normalize(mean=stats[2], std=stats[3])\n",
+    "\n",
     "\n",
     "print(train_transform)\n",
     "print(test_transform)\n",
@@ -93,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,6 +156,7 @@
     "        segmentation_mask = slic.iterate(cp_img)\n",
     "        # print(i, len(np.unique(segmentation_mask)))\n",
     "        # assert len(np.unique(segmentation_mask)) == n_segments, f\"Got {len(np.unique(segmentation_mask))} segments from SLIC, but expected {n_segments}\"\n",
+    "\n",
     "        save_mask[i, :, :] = torch.from_numpy(segmentation_mask).to(DEVICE)\n",
     "        \n",
     "    return save_mask\n",
@@ -192,9 +189,11 @@
     "\n",
     "        assert torch.sum(torch.isnan(magnitude)).item() == 0, \"NaN element in the magnitude before normalization\"\n",
     "\n",
-    "        # Normalize scales\n",
-    "        magnitude = magnitude / (1 if torch.max(magnitude)==0 else torch.max(magnitude))  # [0 1] -- divide by 1 if max is already 0.\n",
+    "        # Normalize scales & standardize data according to dataset statistics\n",
+    "        # magnitude = magnitude / (1 if torch.max(magnitude)==0 else torch.max(magnitude))  # [0 1] -- divide by 1 if max is already 0.\n",
+    "        magnitude = standard_transform_mag(magnitude)\n",
     "        phase = phase / torch.tensor(math.pi) # [-1 1]\n",
+    "        phase = standard_transform_phase(phase)\n",
     "\n",
     "        # print(torch.max(magnitude))\n",
     "        # print(torch.max(phase))\n",
@@ -206,18 +205,17 @@
     "        # Save\n",
     "        to_save = torch.stack((magnitude, phase)).reshape((fourier_transform.shape[0], -1))\n",
     "        seg_out[:, i, :] = to_save\n",
-    "        \n",
     "\n",
     "        # Find positional info (Area, center coordinates, max width/height)\n",
     "        area = torch.sum(binary_mask, axis=(1,2)) / (binary_mask.shape[1] * binary_mask.shape[2])\n",
     "\n",
     "        # If the binary mask has any True values for segment i, then find the center coordinate. Else, return 0\n",
-    "        centroid = torch.stack([ (torch.mean(torch.argwhere(img_mask).float(),axis=0) / torch.tensor(img_mask.shape, device=DEVICE)) if torch.argwhere(img_mask).numel() > 0 else torch.zeros((2), device=DEVICE) for img_mask in binary_mask])\n",
+    "        centroid = torch.stack([ (torch.mean(torch.argwhere(img_mask).float(),axis=0)) / torch.tensor(img_mask.shape, device=DEVICE) if torch.argwhere(img_mask).numel() > 0 else torch.zeros((2), device=DEVICE) for img_mask in binary_mask])\n",
     "        center_x = centroid[:, 0]\n",
     "        center_y = centroid[:, 1]\n",
     "\n",
     "        # If the binary mask has any True values for segment i, then find the max width/height of the segment. Else, return 0\n",
-    "        rect = torch.stack([ (torch.max(torch.argwhere(img_mask), axis=0).values - torch.min(torch.argwhere(img_mask), axis=0).values / torch.tensor(img_mask.shape, device=DEVICE)) if torch.argwhere(img_mask).numel() > 0 else torch.zeros((2), device=DEVICE) for img_mask in binary_mask])\n",
+    "        rect = torch.stack([ (torch.max(torch.argwhere(img_mask), axis=0).values - torch.min(torch.argwhere(img_mask), axis=0).values) / torch.tensor(img_mask.shape, device=DEVICE) if torch.argwhere(img_mask).numel() > 0 else torch.zeros((2), device=DEVICE) for img_mask in binary_mask])\n",
     "\n",
     "        width = rect[:, 0]\n",
     "        height = rect[:, 1]\n",
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -249,52 +247,12 @@
       "6\n",
       "7\n",
       "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n"
+      "9\n"
      ]
     }
    ],
    "source": [
-    "data_type = \"train\"\n",
+    "data_type = \"test\"\n",
     "use = data_loader_train if data_type==\"train\" else data_loader_test\n",
     "\n",
     "# Iterate over dataloader\n",
